Lagt til endpoint for oversikt i JSON-format og tester

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.mustache.prefix=classpath:/templates/
 spring.mustache.suffix=.html
+bysykkel.baseurl=https://gbfs.urbansharing.com/oslobysykkel.no/
+bysykkel.station_information.endpoint=/station_information.json
+bysykkel.station_status.endpoint=/station_status.json
